CICO-3997 fixed issues with horizontal scroll styling

--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -228,6 +228,10 @@
           }
         }
     }
+
+    .calendar-wraper {
+      position: relative;
+    }
     
     .rate-calendar{
         table {
